@@ -3,6 +3,7 @@ x.x:
 
 - fixed: error in getting extra sendmail options
 - fixed: PHP notices
+- fixed: subject and to/from encoding (thanks to migrax https://github.com/migrax)
 - changed: registration of menu items
 
 2.2 (2012-03-02):
